fixed css for the collapsable menu to deal with ecosystems tab

--- a/mobile/css/research.css
+++ b/mobile/css/research.css
@@ -1015,9 +1015,9 @@ body {
     .container {
         padding-left: 35px;
     }
-    .navbar-header {
+/*    .navbar-header {
         width: 140px;
-    }
+    }*/
     .navbar-brand {
         text-indent: -9999px;
         width: 120px;
